<resources>
    <string name="app_name">MyView</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="main_fragment">首页</string>

    <string name="view_main_fragment">自定义view</string>
    <string name="slide_delete_fragment">左滑删除列表</string>
    <string name="item_delete_fragment">左滑删除控件</string>
    <string name="item_numberrain_fragment">数字雨</string>
    <string name="item_progresscircle_fragment">数字雨</string>

    <string name="module_main_fragment">常用封装子module</string>
    <string name="item_aidl_easyuse">aidl使用</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>