<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/view_navigation"
            app:startDestination="@id/mainFragment">
    <fragment
    android:id="@+id/mainFragment"
    android:name="com.example.myview.MainFragment"
    android:label="@string/main_fragment"
    tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_main_to_view"
            app:destination="@id/viewMainFragment">
        </action>
        <action
            android:id="@+id/action_main_to_module"
            app:destination="@id/moduleMainFragment">
        </action>

    </fragment>

<!-- =============================   view   =============================       -->
    <fragment
    android:id="@+id/viewMainFragment"
    android:name="com.example.myview.view.ViewMainFragment"
    android:label="@string/view_main_fragment"
    tools:layout="@layout/fragment_main">
        <action
            android:id="@+id/action_main_to_slide_delete"
            app:destination="@id/SlideDeleteRecycleViewDemo">
        </action>
        <action
            android:id="@+id/action_main_to_left_delete"
            app:destination="@id/leftDeleteItemLayoutDemo">
        </action>
        <action
                android:id="@+id/action_main_to_number_rain"
                app:destination="@id/NeoViewDemo">
        </action>
    </fragment>
    <fragment
            android:id="@+id/SlideDeleteRecycleViewDemo"
            android:name="com.example.myview.viewDemo.SlideDeleteRecyclerViewDemo"
            android:label="@string/slide_delete_fragment"
            tools:layout="@layout/fragment_slide_delete"
    />
    <fragment
        android:id="@+id/leftDeleteItemLayoutDemo"
        android:name="com.example.myview.viewDemo.LeftDeleteItemLayoutDemo"
        android:label="@string/item_delete_fragment"
        tools:layout="@layout/fragment_left_delete"/>
    <fragment
            android:id="@+id/NeoViewDemo"
            android:name="com.example.myview.viewDemo.NeoViewDemo"
            android:label="@string/item_numberrain_fragment"
            tools:layout="@layout/fragment_neo_view"/>


    <!-- =============================  module  =============================       -->

    <fragment
            android:id="@+id/moduleMainFragment"
            android:name="com.example.myview.view.ModuleMainFragment"
            android:label="@string/module_main_fragment"
            tools:layout="@layout/fragment_main">
        <action
                android:id="@+id/action_main_to_aidl_easytest"
                app:destination="@id/AIDLEasyTestView">
        </action>
    </fragment>

    <fragment
            android:id="@+id/AIDLEasyTestView"
            android:name="com.example.myview.moduleDemo.AIDLEasyTestView"
            android:label="@string/item_aidl_easyuse"
            tools:layout="@layout/fragment_module_aidl"/>

</navigation>